--- a/k8s/config/common-config.yaml
+++ b/k8s/config/common-config.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: common-config
-  namespace: default
+  namespace: logistics
 data:
   DB_HOST: "postgres"
   DB_NAME: "logistics_db"
