--- a/k8s/infrastructure/postgres.yaml
+++ b/k8s/infrastructure/postgres.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
-  namespace: default
+  namespace: logistics
 type: Opaque
 stringData:
   postgres-password: password
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: default
+  namespace: logistics
 spec:
   accessModes:
     - ReadWriteOnce
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: default
+  namespace: logistics
 spec:
   ports:
     - port: 5432
@@ -46,7 +46,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: default
+  namespace: logistics
 spec:
   serviceName: "postgres"
   replicas: 1
