--- a/k8s/infrastructure/rabbitmq.yaml
+++ b/k8s/infrastructure/rabbitmq.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rabbitmq-secret
-  namespace: default
+  namespace: logistics
 type: Opaque
 stringData:
   rabbitmq-user: user
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
-  namespace: default
+  namespace: logistics
 spec:
   # clusterIP: None makes it a Headless Service, providing stable DNS for StatefulSet
   clusterIP: None
@@ -34,7 +34,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: rabbitmq
-  namespace: default
+  namespace: logistics
 spec:
   serviceName: "rabbitmq"
   replicas: 1
