--- a/logistics-api/src/main/resources/application.properties
+++ b/logistics-api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ mp.messaging.outgoing.orders-out.routing-key=orders
 
 # RabbitMQ connection
 rabbitmq-host=${RABBITMQ_HOST:localhost}
-rabbitmq-port=${RABBITMQ_PORT:5672}
+rabbitmq-port=${RABBIT_PORT:5672}
 rabbitmq-username=${RABBITMQ_USER:user}
 rabbitmq-password=${RABBITMQ_PASSWORD:password}
 
