--- a/charts/eglh/templates/apps/route-worker.yaml
+++ b/charts/eglh/templates/apps/route-worker.yaml
@@ -19,7 +19,7 @@ spec:
       initContainers:
       - name: wait-for-infrastructure
         image: busybox:1.36
-        command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
+        command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv eglh-rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
       containers:
       - name: route-worker
         image: {{ .Values.apps.routeWorker.image | quote }}
@@ -50,6 +50,11 @@ spec:
             configMapKeyRef:
               name: common-config
               key: RABBITMQ_HOST
+        - name: RABBIT_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: common-config
+              key: RABBIT_PORT
         - name: RABBITMQ_USER
           valueFrom:
             secretKeyRef:
