--- a/route-worker/src/main/resources/application.properties
+++ b/route-worker/src/main/resources/application.properties
@@ -15,7 +15,7 @@ mp.messaging.incoming.orders-in.exchange.name=orders-exchange
 
 # RabbitMQ connection
 rabbitmq-host=${RABBITMQ_HOST:localhost}
-rabbitmq-port=${RABBITMQ_PORT:5672}
+rabbitmq-port=${RABBIT_PORT:5672}
 rabbitmq-username=${RABBITMQ_USER:user}
 rabbitmq-password=${RABBITMQ_PASSWORD:password}
 
