--- a/k8s/apps/route-worker.yaml
+++ b/k8s/apps/route-worker.yaml
@@ -21,7 +21,7 @@ spec:
       initContainers:
       - name: wait-for-infrastructure
         image: busybox:1.36
-        command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
+        command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv eglh-rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
       containers:
       - name: route-worker
         image: route-worker:latest # Needs to be built and available in K8s
@@ -52,6 +52,8 @@ spec:
             configMapKeyRef:
               name: common-config
               key: RABBITMQ_HOST
+        - name: RABBIT_PORT
+          value: "5672"
         - name: RABBITMQ_USER
           valueFrom:
             secretKeyRef:
