--- a/charts/eglh/templates/apps/route-worker.yaml
+++ b/charts/eglh/templates/apps/route-worker.yaml
@@ -15,13 +15,30 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+        {{- if not .Values.openshift.enabled }}
         runAsUser: 185
+        {{- else }}
+        seccompProfile:
+          type: RuntimeDefault
+        {{- end }}
       initContainers:
       - name: wait-for-infrastructure
+        {{- if .Values.openshift.enabled }}
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
+        {{- end }}
         image: busybox:1.36
         command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv eglh-rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
       containers:
       - name: route-worker
+        {{- if .Values.openshift.enabled }}
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
+        {{- end }}
         image: {{ .Values.apps.routeWorker.image | quote }}
         imagePullPolicy: IfNotPresent
         env:
