--- a/k8s/apps/logistics-api.yaml
+++ b/k8s/apps/logistics-api.yaml
@@ -31,13 +31,22 @@ spec:
       serviceAccountName: api-service-account
       securityContext:
         runAsNonRoot: true
-        runAsUser: 185 # Standard UID for Quarkus UBI image
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: wait-for-infrastructure
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
         image: busybox:1.36
         command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv eglh-rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
       containers:
       - name: logistics-api
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
         image: logistics-api:latest # Needs to be built and available in K8s
         imagePullPolicy: IfNotPresent
         ports:
