--- a/k8s/apps/route-worker.yaml
+++ b/k8s/apps/route-worker.yaml
@@ -17,13 +17,22 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
-        runAsUser: 185 # Standard UID for Quarkus UBI image
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: wait-for-infrastructure
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
         image: busybox:1.36
         command: ['sh', '-c', "until nc -zv postgres 5432 && nc -zv eglh-rabbitmq 5672; do echo waiting for infra; sleep 2; done"]
       containers:
       - name: route-worker
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
         image: route-worker:latest # Needs to be built and available in K8s
         imagePullPolicy: IfNotPresent
         env:
