feat(openshift): ensure full compatibility with OpenShift Sandbox
- Replaced hardcoded namespaces with dynamic .Release.Namespace
- Disabled ResourceQuotas and LimitRanges for Sandbox deployment
- Fixed BuildConfig contextDir and image streams
- Updated securityContext to comply with restricted-v2 SCC profile
- Documented OpenShift-specific lessons learned in README

--- a/charts/eglh/templates/apps/ingress.yaml
+++ b/charts/eglh/templates/apps/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: logistics-ingress
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
