--- a/charts/eglh/templates/apps/openshift-route.yaml
+++ b/charts/eglh/templates/apps/openshift-route.yaml
@@ -3,7 +3,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: logistics-api
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: logistics-api
 spec:
