--- a/charts/eglh/templates/jobs/db-cleanup-cronjob.yaml
+++ b/charts/eglh/templates/jobs/db-cleanup-cronjob.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: db-cleanup
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   schedule: "0 * * * *"
   jobTemplate:
