--- a/charts/eglh/templates/config/common-config.yaml
+++ b/charts/eglh/templates/config/common-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: common-config
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 data:
   DB_HOST: "postgres"
   DB_NAME: {{ .Values.infrastructure.postgres.db | quote }}
