--- a/charts/eglh/templates/config/namespace-resources.yaml
+++ b/charts/eglh/templates/config/namespace-resources.yaml
@@ -1,8 +1,9 @@
+{{- if .Values.quota.enabled -}}
 apiVersion: v1
 kind: ResourceQuota
 metadata:
   name: logistics-quota
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   hard:
     pods: {{ .Values.quota.pods | quote }}
@@ -15,7 +16,7 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: logistics-limits
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   limits:
   - default:
@@ -25,3 +26,4 @@ spec:
       cpu: 100m
       memory: 128Mi
     type: Container
+{{- end -}}
