--- a/charts/eglh/templates/infrastructure/postgres.yaml
+++ b/charts/eglh/templates/infrastructure/postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
   postgres-password: {{ .Values.infrastructure.postgres.password | quote }}
@@ -13,7 +13,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   accessModes: [ "ReadWriteOnce" ]
   resources:
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - port: 5432
@@ -37,7 +37,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   serviceName: "postgres"
   replicas: 1
