--- a/charts/eglh/templates/infrastructure/rabbitmq.yaml
+++ b/charts/eglh/templates/infrastructure/rabbitmq.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rabbitmq-secret
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
   rabbitmq-user: {{ .Values.infrastructure.rabbitmq.user | quote }}
@@ -12,7 +12,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: rabbitmq-pvc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   accessModes: [ "ReadWriteOnce" ]
   resources:
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: eglh-rabbitmq
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - port: 5672
@@ -37,7 +37,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: eglh-rabbitmq
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   serviceName: "eglh-rabbitmq"
   replicas: 1
