fix(openshift): use internal ImageStream tags for deployments

--- a/charts/eglh/templates/apps/logistics-api.yaml
+++ b/charts/eglh/templates/apps/logistics-api.yaml
@@ -52,7 +52,11 @@ spec:
           capabilities:
             drop: ["ALL"]
         {{- end }}
+        {{- if .Values.openshift.enabled }}
+        image: logistics-api:latest
+        {{- else }}
         image: {{ .Values.apps.logisticsApi.image | quote }}
+        {{- end }}
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
